// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalNotification component renders a children if passed 1`] = `
<div
  className="modal-item modal-notification content"
>
  <header
    className="content is-flex"
  >
    <div
      className="date has-text-left"
    >
      08/28/2019
    </div>
    <div
      className="time has-text-right"
    >
      12:00AM
    </div>
  </header>
  <div
    className="description content has-text-centered pl-15 pr-15"
  >
    <div>
      Children content!
    </div>
  </div>
  <div
    className="modal-footer content is-flex"
  >
    <button
      className="button is-light remove-button"
      onClick={[Function]}
    >
      REMOVE
    </button>
  </div>
</div>
`;

exports[`ModalNotification component renders without a remove button 1`] = `
<div
  className="modal-item modal-notification content"
>
  <header
    className="content is-flex"
  >
    <div
      className="date has-text-left"
    >
      08/28/2019
    </div>
    <div
      className="time has-text-right"
    >
      12:00AM
    </div>
  </header>
  <div
    className="description content has-text-centered pl-15 pr-15 mb-30"
  />
</div>
`;

exports[`ModalNotification component renders without crashing 1`] = `
<div
  className="modal-item modal-notification content"
>
  <header
    className="content is-flex"
  >
    <div
      className="date has-text-left"
    >
      08/28/2019
    </div>
    <div
      className="time has-text-right"
    >
      12:00AM
    </div>
  </header>
  <div
    className="description content has-text-centered pl-15 pr-15"
  />
  <div
    className="modal-footer content is-flex"
  >
    <button
      className="button is-light remove-button"
      onClick={[Function]}
    >
      REMOVE
    </button>
  </div>
</div>
`;
